# cnxns

./: .gitignore  Cargo.toml  Dockerfile  config.toml
src/: daily.rs  fbref_scraper.rs  lib.rs  main.rs  scraper.rs  server.rs
src/app/: backend.rs  connection_types.rs  data_types.rs  entity_types.rs  html.rs  mod.rs  server.rs  team_data.rs
src/app/psql/: app_schema.rs  connections.rs  daily_players.rs  mod.rs  search_players.rs
src/db/: check_schedule_urls.rs  mod.rs  schema.rs
src/db/api/: fixtures.rs  generate_key.rs  matches.rs  mod.rs
src/db/app/: mod.rs
src/db/psql/: app_schema.rs  mod.rs  schema.rs  scraping.rs  update_scrape_status.rs  useful.sql
src/scrape/: errors.rs  fixtures.rs  matches.rs  mod.rs  scraping.rs  url.rs
static/css/: styles.css
static/data/: instructions.txt  team_colours.csv
static/html/: instructions.html  page.html
static/js/: game.js
