[package]
name = "cnxns"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "scraper"
path = "src/scraper.rs"


[dependencies]
scraper = "0.18"
reqwest = { version = "0.11", features = ["json", "blocking"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
chrono = "0.4.41"
serde_json = "1.0.142"
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
